--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ body {
 
 @media screen and (min-width: 48em) {
     body {
+        padding: 4rem 7%;
         background: url("../images/pattern-background-desktop.svg") top  no-repeat;
         background-color: var(--p-pale-blue);
         background-size: 100%;
